--- a/style.css
+++ b/style.css
@@ -14,9 +14,11 @@
     width: 100%;
     height: 100vh;
     position: fixed;
+    z-index: 999999;
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #000a1d;
 }
 
 .loader_img{
